Add product image & remove product for cart_side

--- a/cart/templates/cart/cart_sidebar.html
+++ b/cart/templates/cart/cart_sidebar.html
@@ -12,13 +12,13 @@
                         <li class="mini-cart__product d-flex justify-content-between">
                             <div class="mini-cart__product__image">
                                 <a href="#">
-                                    <img src="assets/img/products/prod-1-100x100.jpg">
+                                    <img src="{{ item.product_obj.image.url }}">
                                 </a>
                             </div>
                             <div class="mini-cart__product__content pt-2">
                                 <span class="mini-cart__product__title d-flex flex-row justify-content-between">
-                                    <a href="#">{{ item.product_obj.title }}</a>
-                                    <a href="#" class="">
+                                    <a href="{{ item.product_obj.get_absolute_url }}">{{ item.product_obj.title }}</a>
+                                    <a href="{% url 'cart:cart_remove' item.product_obj.id %}" class="">
                                         &#10060;
                                     </a>
                                 </span>
