Add product counter

--- a/products/templates/products/product_list.html
+++ b/products/templates/products/product_list.html
@@ -25,7 +25,7 @@
                                 <div class="container row align-items-center">
                                     <div class="col-lg-12 mb-md--50 mb-xs--10">
                                         <div class="shop-toolbar__left d-flex align-items-sm-center align-items-start flex-sm-row flex-column">
-                                            <p class="product-pages">نمایش ۱-۲۰ از ۴۹</p>
+                                            <p class="product-pages"> نمایش {{ products|length }} از {{ products|length }}</p>
                                         </div>
                                     </div>
                                 </div>
