--- a/products/templates/products/product_list.html
+++ b/products/templates/products/product_list.html
@@ -1,4 +1,7 @@
 {% extends '_base.html' %}
+
+{% load persian_traslation_tags %}
+
 {% block title %}Product List{% endblock %}
 {% block content %}
 
@@ -64,7 +67,7 @@
                                                                 <a href="{{ product.get_absolute_url }}">{{ product.title }}</a>
                                                             </h3>
                                                             <div class="product-price-wrapper mb--30">
-                                                                <span class="money text-success ">{{ product.price }}</span>
+                                                                <span class="money text-success ">{{ product.price|translate_number }}</span>
                                                             </div>
                                                             <a href="cart.html"
                                                                class="btn btn-small btn-bg-sand btn-color-dark px-3">اضافه
