--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -5,6 +5,7 @@
 {% load comment_tags %}
 {% load i18n %}
 {% load jalali_tags %}
+{% load humanize %}
 
 {% load persian_traslation_tags %}
 
@@ -34,7 +35,7 @@
                                     {{ product.description }}
                                 </p>
                                 <div class="my-5 py-5 product-price-wrapper mb--25">
-                                    <span class="money text-success">{{ product.price|translate_number }}</span>
+                                    <span class="money text-success">{{ product.price|intcomma:False|translate_number }} {% trans '$' %}</span>
                                     <span class="price-separator">-</span>
                                     <span class="money old-price text-danger">۲۱۰,۰۰۰ {% trans '$' %}</span>
                                 </div>
