Implement humanize & persian_traslation_tags for cart_sidebar [cart]

--- a/cart/templates/cart/cart_sidebar.html
+++ b/cart/templates/cart/cart_sidebar.html
@@ -1,4 +1,6 @@
 {% load i18n %}
+{% load humanize %}
+{% load persian_traslation_tags %}
 
 <!-- Mini Cart Start -->
 <aside class="mini-cart" id="miniCart">
@@ -23,7 +25,7 @@
                                     </a>
                                 </span>
                                 <span class="mini-cart__product__quantity">
-                                    <span>{{ item.product_obj.price }} {% trans '$' %}</span> &#215; <span>{{ item.quantity }}</span>
+                                    <span>{{ item.product_obj.price|intcomma:False|translate_number }} {% trans '$' %}</span> &#215; <span>{{ item.quantity }}</span>
                                 </span>
                             </div>
                         </li>
@@ -31,7 +33,7 @@
                 </ul>
                 <div class="mini-cart__total">
                     <span>{% trans 'Total' %}</span>
-                    <span class="ammount">{{ cart.get_total_price }} {% trans '$' %}</span>
+                    <span class="ammount">{{ cart.get_total_price|intcomma:False|translate_number }} {% trans '$' %}</span>
                 </div>
                 <div class="mini-cart__buttons">
                     <a href="{% url 'cart:cart_detail' %}"
