change form in order_create [orders]

--- a/orders/templates/orders/order_create.html
+++ b/orders/templates/orders/order_create.html
@@ -9,114 +9,152 @@
 {% block title %}Product Detail{% endblock %}
 {% block content %}
 
-
     <!-- Main Content Wrapper Start -->
     <div class="main-content-wrapper">
 
         {% trans 'order' as header_name %}
         {% include 'top_header.html' with header_name=header_name %}
 
-            <div class="page-content-inner">
-                <div class="container">
-                    <div class="row pt--50 pt-md--40 pt-sm--20"></div>
-                    <div class="row pb--80 pb-md--60 pb-sm--40">
-                        <!-- Checkout Area Start -->
-                        <div class="col-lg-6">
-                            <div class="checkout-title mt--10">
-                                <h2>جزئیات سفارش</h2>
-                            </div>
-                            <div class="checkout-form">
-                                {{ form|crispy }}
-                            </div>
+        <div class="page-content-inner">
+            <div class="container">
+                <div class="row pt--50 pt-md--40 pt-sm--20"></div>
+                <div class="row pb--80 pb-md--60 pb-sm--40">
+                    <!-- Checkout Area Start -->
+                    <div class="col-lg-6">
+                        <div class="checkout-title mt--10">
+                            <h2>جزئیات سفارش</h2>
                         </div>
-                        <div class="col-xl-5 offset-xl-1 col-lg-6 mt-md--40">
-                            <div class="order-details">
-                                <div class="checkout-title mt--10">
-                                    <h2>سفارش شما</h2>
+{#                            <div class="checkout-form">#}
+{#                                {{ form|crispy }}#}
+{#                            </div>#}
+                        <div class="checkout-form">
+                            <form action="" method="POST" class="form form--checkout">
+                                {% csrf_token %}
+                                {% if form.errors %}
+                                    <div class="alert alert-danger">
+                                        {{ form.errors }}
+                                    </div>
+                                {% endif %}
+                                <div class="form-row mb--20">
+                                    <div class="form__group col-md-6 mb-sm--30">
+                                        <label for="billing_fname" class="form__label form__label--2">نام  <span class="required">*</span></label>
+                                        <input type="text" name="first_name" id="billing_fname" class="form__input form__input--2">
+                                    </div>
+                                    <div class="form__group col-md-6">
+                                        <label for="billing_lname" class="form__label form__label--2">نام خانوادگی  <span class="required">*</span></label>
+                                        <input type="text" name="last_name" id="billing_lname" class="form__input form__input--2">
+                                    </div>
                                 </div>
-                                <div class="table-content table-responsive mb--30">
-                                    <table class="table order-table order-table-2">
-                                        <thead>
-                                            <tr>
-                                                <th>محصول</th>
-                                                <th class="text-right">قیمت نهایی</th>
-                                            </tr>
-                                        </thead>
-
-                                        <tbody>
-                                            {% for item in cart %}
-                                                <tr>
-                                                    <th>{{ item.product_obj.title }}
-                                                        <strong><span>&#10005;</span>{{ item.quantity }}</strong>
-                                                    </th>
-                                                    <td class="text-right">
-                                                        {{ item.product_obj.price|intcomma:False|translate_number }}
-                                                        {% trans '$' %}
-                                                    </td>
-                                                </tr>
-                                            {% endfor %}
-                                        </tbody>
-                                        <tfoot>
-                                            <tr class="cart-subtotal">
-                                                <th>{% trans 'Total' %}</th>
-                                                <td class="text-right">
-                                                    {{ cart.get_total_price|intcomma:False|translate_number }}
-                                                    {% trans '$' %}
-                                                </td>
-                                            </tr>
-                                        </tfoot>
-                                    </table>
+                                <div class="form-row mb--20">
+                                    <div class="form__group col-12">
+                                        <label for="billing_address" class="form__label form__label--2">آدرس</label>
+                                        <input type="text" name="address" id="billing_address" class="form__input form__input--2">
+                                    </div>
                                 </div>
-                                <div class="checkout-payment">
-                                    <h2 class="py-5">روش پرداخت</h2>
-                                    <form action="#" class="payment-form">
-                                        <div class="payment-group mb--10">
-                                            <div class="payment-radio">
-                                                <input type="radio" value="bank" name="payment-method" id="bank" checked>
-                                                <label class="payment-label" for="cheque">درگاه آنلاین زرین پال</label>
-                                            </div>
-                                        </div>
-                                    </form>
+                                <div class="form-row mb--20">
+                                    <div class="form__group col-12">
+                                        <label for="billing_phone" class="form__label form__label--2">شماره همراه <span class="required">*</span></label>
+                                        <input type="text" name="phone_number" id="billing_phone" class="form__input form__input--2">
+                                    </div>
                                 </div>
-                            </div>
+                                <div class="form-row">
+                                    <div class="form__group col-12">
+                                        <label for="orderNotes" class="form__label form__label--2">یادداشت شما</label>
+                                        <textarea class="form__input form__input--2 form__input--textarea" id="orderNotes" name="order_note" placeholder="اگر یادداشتی دارید در اینجا وارد کنید. در غیر این صورت این مکان را خالی بگذارید"></textarea>
+                                    </div>
+                                </div>
+                                <button class="btn" type="submit">{% trans 'Submit' %}</button>
+                            </form>
                         </div>
-                        <!-- Checkout Area End -->
                     </div>
+                    <div class="col-xl-5 offset-xl-1 col-lg-6 mt-md--40">
+                        <div class="order-details">
+                            <div class="checkout-title mt--10">
+                                <h2>سفارش شما</h2>
+                            </div>
+                            <div class="table-content table-responsive mb--30">
+                                <table class="table order-table order-table-2">
+                                    <thead>
+                                    <tr>
+                                        <th>محصول</th>
+                                        <th class="text-right">قیمت نهایی</th>
+                                    </tr>
+                                    </thead>
+
+                                    <tbody>
+                                    {% for item in cart %}
+                                        <tr>
+                                            <th>{{ item.product_obj.title }}
+                                                <strong><span>&#10005;</span>{{ item.quantity }}</strong>
+                                            </th>
+                                            <td class="text-right">
+                                                {{ item.product_obj.price|intcomma:False|translate_number }}
+                                                {% trans '$' %}
+                                            </td>
+                                        </tr>
+                                    {% endfor %}
+                                    </tbody>
+                                    <tfoot>
+                                    <tr class="cart-subtotal">
+                                        <th>{% trans 'Total' %}</th>
+                                        <td class="text-right">
+                                            {{ cart.get_total_price|intcomma:False|translate_number }}
+                                            {% trans '$' %}
+                                        </td>
+                                    </tr>
+                                    </tfoot>
+                                </table>
+                            </div>
+                            <div class="checkout-payment">
+                                <h2 class="py-5">روش پرداخت</h2>
+                                <form action="#" class="payment-form">
+                                    <div class="payment-group mb--10">
+                                        <div class="payment-radio">
+                                            <input type="radio" value="bank" name="payment-method" id="bank" checked>
+                                            <label class="payment-label" for="cheque">درگاه آنلاین زرین پال</label>
+                                        </div>
+                                    </div>
+                                </form>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- Checkout Area End -->
                 </div>
             </div>
         </div>
+    </div>
     <!-- Main Content Wrapper Start -->
 
     <!-- Footer Start-->
     <footer class="footer">
-            <div class="footer-top bg-color ptb--50" data-bg-color="#f6f6f6">
-                <div class="container">
-                    <div class="row justify-content-center">
-                        <div class="col-lg-9 text-center">
-                            <div class="footer-widget mb--50">
-                                <div class="textwidget">
-                                    <img src="assets/img/codingyar_logo.png" alt="Logo">
-                                </div>
+        <div class="footer-top bg-color ptb--50" data-bg-color="#f6f6f6">
+            <div class="container">
+                <div class="row justify-content-center">
+                    <div class="col-lg-9 text-center">
+                        <div class="footer-widget mb--50">
+                            <div class="textwidget">
+                                <img src="assets/img/codingyar_logo.png" alt="Logo">
                             </div>
-                            <div class="footer-widget mb--50 pb--1">
-                                <ul class="product-footer-meta footer-menu">
-                                    <li>
-                                        <a href="{% url 'aboutus' %}">{% trans 'About Us' %}</a>
-                                    </li>
-                                    <span> | </span>
-                                    <li>
-                                        <a href="">{% trans 'Terms and Conditions' %}</a>
-                                    </li>
-                                </ul>
-                            </div>
-                            <div class="footer-widget">
-                                {% trans 'All rights reserved' %}
-                            </div>
+                        </div>
+                        <div class="footer-widget mb--50 pb--1">
+                            <ul class="product-footer-meta footer-menu">
+                                <li>
+                                    <a href="{% url 'aboutus' %}">{% trans 'About Us' %}</a>
+                                </li>
+                                <span> | </span>
+                                <li>
+                                    <a href="">{% trans 'Terms and Conditions' %}</a>
+                                </li>
+                            </ul>
+                        </div>
+                        <div class="footer-widget">
+                            {% trans 'All rights reserved' %}
                         </div>
                     </div>
                 </div>
             </div>
-        </footer>
+        </div>
+    </footer>
     <!-- Footer End-->
 
 {% endblock %}
